# jupyter-mcp-setup

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test.ipynb
src/jupyter_mcp_setup/: __init__.py  cli.py  installer.py  server_setup.py  utils.py  validator.py
